Modified Contact screen.

--- a/CodomottoT/Screen/Contact/Contact.storyboard
+++ b/CodomottoT/Screen/Contact/Contact.storyboard
@@ -14,28 +14,73 @@
                         <viewControllerLayoutGuide type="bottom" id="xRG-hS-X7d"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="BLA-ot-8gZ">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="400"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact Screen" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T1o-RP-ecW">
-                                <rect key="frame" x="0.0" y="180" width="320" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="Uqp-UF-BOD"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="40" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="l2L-vJ-7Dn">
+                                <rect key="frame" x="0.0" y="64" width="320" height="336"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContactMainCell" rowHeight="100" id="qpp-0H-IZ6" customClass="ContactMainCell">
+                                        <rect key="frame" x="0.0" y="92" width="320" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qpp-0H-IZ6" id="Hr3-04-uxq">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="99"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WCd-mW-A0k">
+                                                    <rect key="frame" x="8" y="8" width="304" height="21"/>
+                                                    <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="rY2-d3-P1O"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="304" translatesAutoresizingMaskIntoConstraints="NO" id="ULI-ca-oL4">
+                                                    <rect key="frame" x="8" y="37" width="304" height="54"/>
+                                                    <color key="backgroundColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" red="0.30196078430000001" green="0.73725490199999999" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstItem="ULI-ca-oL4" firstAttribute="leading" secondItem="Hr3-04-uxq" secondAttribute="leading" constant="8" id="1O7-Je-0US"/>
+                                                <constraint firstItem="ULI-ca-oL4" firstAttribute="top" secondItem="WCd-mW-A0k" secondAttribute="bottom" constant="8" id="C2T-8i-kh7"/>
+                                                <constraint firstItem="WCd-mW-A0k" firstAttribute="top" secondItem="Hr3-04-uxq" secondAttribute="top" constant="8" id="LhM-t5-enk"/>
+                                                <constraint firstItem="WCd-mW-A0k" firstAttribute="leading" secondItem="Hr3-04-uxq" secondAttribute="leading" constant="8" id="PjH-6k-ROn"/>
+                                                <constraint firstAttribute="trailing" secondItem="ULI-ca-oL4" secondAttribute="trailing" constant="8" id="fjM-vc-ySb"/>
+                                                <constraint firstAttribute="bottom" secondItem="ULI-ca-oL4" secondAttribute="bottom" constant="8" id="myA-vI-ksb"/>
+                                                <constraint firstAttribute="trailing" secondItem="WCd-mW-A0k" secondAttribute="trailing" constant="8" id="oWT-ip-Kcj"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="contentLabel" destination="ULI-ca-oL4" id="EfM-e0-pJw"/>
+                                            <outlet property="nameLabel" destination="WCd-mW-A0k" id="j1I-y6-Xrs"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="DrQ-QX-5Fh" id="zS2-wJ-QNe"/>
+                                    <outlet property="delegate" destination="DrQ-QX-5Fh" id="Nfh-94-ICs"/>
+                                </connections>
+                            </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="T1o-RP-ecW" firstAttribute="centerX" secondItem="BLA-ot-8gZ" secondAttribute="centerX" id="cZb-zs-W9e"/>
-                            <constraint firstItem="T1o-RP-ecW" firstAttribute="centerY" secondItem="BLA-ot-8gZ" secondAttribute="centerY" constant="40.5" id="cwj-PT-Jcq"/>
-                            <constraint firstAttribute="trailing" secondItem="T1o-RP-ecW" secondAttribute="trailing" id="gon-lJ-epZ"/>
-                            <constraint firstItem="T1o-RP-ecW" firstAttribute="leading" secondItem="BLA-ot-8gZ" secondAttribute="leading" id="wCh-y0-3ww"/>
+                            <constraint firstItem="l2L-vJ-7Dn" firstAttribute="leading" secondItem="BLA-ot-8gZ" secondAttribute="leading" id="AFZ-27-4No"/>
+                            <constraint firstAttribute="trailing" secondItem="l2L-vJ-7Dn" secondAttribute="trailing" id="Qyw-7h-KRF"/>
+                            <constraint firstItem="xRG-hS-X7d" firstAttribute="top" secondItem="l2L-vJ-7Dn" secondAttribute="bottom" id="Ra1-ev-xeD"/>
+                            <constraint firstItem="l2L-vJ-7Dn" firstAttribute="top" secondItem="Do0-3S-HGO" secondAttribute="bottom" id="rku-I6-mxG"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="607-AT-O2C"/>
+                    <connections>
+                        <outlet property="mainTableView" destination="l2L-vJ-7Dn" id="1kY-Hc-Xbs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AHy-UL-sgA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -47,7 +92,7 @@
                 <navigationController storyboardIdentifier="ContactNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="CmG-9f-2kL" sceneMemberID="viewController">
                     <toolbarItems/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="320" height="300"/>
+                    <size key="freeformSize" width="320" height="400"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ygc-aV-91L">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
