modified design login, signup, and...

--- a/CodomottoT/Base.lproj/LaunchScreen.storyboard
+++ b/CodomottoT/Base.lproj/LaunchScreen.storyboard
@@ -14,11 +14,28 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Codomotto" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="04x-fQ-fIZ">
+                                <rect key="frame" x="0.0" y="126" width="300" height="48"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="04x-fQ-fIZ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="CIJ-J9-D5V"/>
+                            <constraint firstItem="04x-fQ-fIZ" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Vnq-ZJ-wrx"/>
+                            <constraint firstItem="04x-fQ-fIZ" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="ZNn-Li-MdT"/>
+                            <constraint firstAttribute="trailing" secondItem="04x-fQ-fIZ" secondAttribute="trailing" id="cec-jU-LJb"/>
+                        </constraints>
                     </view>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="300" height="300"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
